--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -73,3 +73,5 @@
 @import "cmps/FilterPill.scss";
 @import "cmps/BreadCrumbs.scss";
 @import "cmps/MainBackdrop";
+@import "cmps/DeliveryTimeArea.scss";
+@import "cmps/ServiceOptions.scss";
