--- a/src/assets/styles/cmps/DynamicBtn.scss
+++ b/src/assets/styles/cmps/DynamicBtn.scss
@@ -10,7 +10,7 @@
 
 
     .filter-btns {
-        .border{
+        .border-0, .border-1 , .border-2, .border-3, .border-4{
             border:1px solid black;
         }
         .filter-btn {
