--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -74,3 +74,4 @@
 @import "cmps/MainBackdrop";
 @import "cmps/DeliveryTimeArea.scss";
 @import "cmps/ServiceOptions.scss";
+@import "cmps/CtaModal.scss";
