--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -9,12 +9,14 @@ html {
     color: $dark-clr;
     overflow-x: hidden;
     scroll-behavior: smooth;
-
 }
 
 body {
     margin: 0;
     accent-color: $dark-clr1;
+    &.modal-open {
+        overflow: hidden;
+    }
 }
 
 main.main-layout {
@@ -72,6 +74,7 @@ input[type=number] {
     }
 
 }
+
 .star {
     width: 1em;
 }
