--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,6 +40,7 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 @import "cmps/SellingText.scss";
+@import "cmps/GigIndex.scss";
 @import "cmps/GigList.scss";
 @import "cmps/GigListWrapper.scss";
 @import "cmps/ShoppingCart";
