--- a/src/assets/styles/cmps/GigIndex.scss
+++ b/src/assets/styles/cmps/GigIndex.scss
@@ -1,6 +1,7 @@
 .gig-index {
     .bread-crumbs {
         margin-block-start: rem(40px);
+        // padding-block-end: rem(12px);
         margin-bottom: 0;
 
     }
