Change breadcrumbs width

--- a/src/assets/styles/cmps/GigIndex.scss
+++ b/src/assets/styles/cmps/GigIndex.scss
@@ -17,6 +17,7 @@
             line-height: rem(24px);
             font-size: 1rem;
             padding-block: rem(8px);
+            letter-spacing: 0.2px;
             color: $dark-clr-4;
         }
 
