--- a/src/assets/styles/cmps/GigIndex.scss
+++ b/src/assets/styles/cmps/GigIndex.scss
@@ -34,6 +34,30 @@
                 &:hover {
                     background-color: #f5f5f5
                 }
+
+                .drop-down-menu {
+                    padding: rem(6px) (8px);
+                    top: rem(42px);
+                    right: 0;
+                    border-width: rem(1px);
+                    border-radius: rem(5px);
+
+                    &::after,
+                    &::before {
+                        display: none;
+                    }
+
+                    .drop-down-item {
+                        white-space: nowrap;
+                        padding: rem(9px) rem(30px);
+                        border: 0;
+                        font-weight: 100;
+
+                        &:hover {
+                            background-color: #f5f5f5;
+                        }
+                    }
+                }
             }
         }
     }
