The carousel appears to have a lower z-index than the modal

--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -131,6 +131,9 @@
         width: 100%;
         max-width: $details-carousel-width;
         height: $details-carousel-height-mobile;
+        &.hide {
+            opacity: .4;
+        }
 
         .carousel {
             position: static;
@@ -324,7 +327,6 @@
                     max-width: $details-carousel-width;
 
                     .slide {
-
                         img {
                             height: $details-carousel-height;
                             object-fit: cover;
