--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -32,6 +32,10 @@
          margin-block-end: auto;
          background-color: $light-clr;
 
+         &.buyer {
+             background-color: $light-clr3;
+         }
+
          .preview-container {
              margin-bottom: em(5px);
              display: grid;
@@ -41,11 +45,12 @@
 
          .icon {
              width: em(16px);
-            }
-            
-            .clock {
-               fill: $dark-clr-1;
-            }
+         }
+
+         .clock {
+             fill: $dark-clr-1;
+         }
+
          .package-heading {
              display: flex;
              align-items: center;
