--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -16,8 +16,10 @@ $light-clr2: #e4e5e7;
 $light-clr1: #f5f5f5;
 $light-clr: #fff;
 $error-clr: #a33030da;
-$fulfilled-clr: #195dc2;
-$pending-clr: #e7bd32;
+$pending-clr: darken($light-clr5, 8%);
+$rejected-clr: darken($dark-clr-1, 10%);
+$approved-clr: #ffc82fd7;
+$fulfilled-clr: $dark-accent-clr;
 
 //Modal Colors
 $modal-underline-clr: #efeff0;
